[project]
name = "physics"
version = "0.1.0"
description = "MCP server for introductory algebra-based physics calculations and simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "sympy>=1.12.0",
    "pillow>=10.1.0",  # For animations
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

